--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.16.1"
+        "mongoose": "^8.16.1",
+        "node-fetch": "^2.7.0"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
