--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,16 @@
         "build": "tsc",
         "start": "node dist/server.js",
         "migrate": "node migrations/add-createdBy-to-existing-records.js",
-        "migrate-indexes": "node migrations/update-unique-indexes.js"
+        "migrate-indexes": "node migrations/update-unique-indexes.js",
+        "test:external-api": "node test-external-api.js"
     },
     "dependencies": {
+        "axios": "^1.6.0",
         "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "express-rate-limit": "^7.1.5",
+        "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.16.1",
         "node-fetch": "^2.7.0"
